force-app/main/default/objects/Scan__c/Scan__c.object-meta.xml
<CustomObject>
    <description>Represents a scan/inventory run of org metadata components for API version analysis</description>
    <label>Scan</label>
    <nameField>
        <displayFormat>SCAN-{0000}</displayFormat>
        <label>Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>