force-app/main/default/objects/Scan__c/fields/BaselineMode__c.field-meta.xml
<CustomField>
    <fullName>BaselineMode__c</fullName>
    <description>Baseline comparison mode used</description>
    <label>Baseline Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InstallTime</fullName>
                <default>true</default>
                <label>Install Time Snapshot</label>
            </value>
            <value>
                <fullName>GoldenBaseline</fullName>
                <label>Golden Baseline</label>
            </value>
            <value>
                <fullName>LastScan</fullName>
                <label>Last Scan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>