force-app/main/default/objects/Scan__c/fields/FinishedAt__c.field-meta.xml
<CustomField>
    <fullName>FinishedAt__c</fullName>
    <description>When the scan finished</description>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>