force-app/main/default/objects/Scan__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>User-defined name for this scan</description>
    <label>Scan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>