force-app/main/default/objects/Scan__c/fields/PerTypeTargetsJson__c.field-meta.xml
<CustomField>
    <fullName>PerTypeTargetsJson__c</fullName>
    <description>JSON map of per-type target API versions</description>
    <label>Per Type Targets JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>