force-app/main/default/objects/Scan__c/fields/ScopeJson__c.field-meta.xml
<CustomField>
    <fullName>ScopeJson__c</fullName>
    <description>Serialized JSON of scope and filter settings used for this scan</description>
    <label>Scope JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>