force-app/main/default/objects/Scan__c/fields/SummaryJson__c.field-meta.xml
<CustomField>
    <fullName>SummaryJson__c</fullName>
    <description>JSON summary of scan results including counts by type and severity</description>
    <label>Summary JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>