force-app/main/default/objects/Scan__c/fields/TargetApiVersion__c.field-meta.xml
<CustomField>
    <fullName>TargetApiVersion__c</fullName>
    <description>Target API version for this scan analysis</description>
    <label>Target API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>